// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Letter /> highlights correct 1`] = `
<div>
  <button
    class="css-1ffgwec"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> highlights incorrect 1`] = `
<div>
  <button
    class="css-17umwbj"
  >
    a
  </button>
</div>
`;

exports[`<Letter /> renders 1`] = `
<div>
  <button
    class="css-wthyh2"
  >
    a
  </button>
</div>
`;
